--- a/src/BsLabPrint/Views/MainView.xaml
+++ b/src/BsLabPrint/Views/MainView.xaml
@@ -51,8 +51,10 @@
                 <Button x:Name="PrintBtn" Content="PRINT" Grid.Column="1" Margin="0,10,0,0"/>
             </Grid>
 
-
-                <Grid x:Name="InputBarcode" Background="White" Grid.Row="1" Margin="0,0,0,10" >
+            <Grid Grid.Row="0" Background="White">
+                
+            </Grid>
+                <Grid x:Name="InputBarcodeGrid" Background="White" Grid.Row="1" Margin="0,0,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="230"/>
                         <ColumnDefinition/>
@@ -60,15 +62,14 @@
                     <Image x:Name="BarcodeInsert" HorizontalAlignment="Right" Margin="8"/>
                     <TextBlock x:Name="TextInput" Grid.Column="1" Text="LTS123456789" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="40,0,0,0" FontSize="70" 
                                Foreground="Black"/>
-
                 </Grid>
 
 
-            <Border Grid.Row="1" BorderBrush="LightGray" BorderThickness="1" Margin="0,0,0,10">
+            <!--<Border Grid.Row="0" BorderBrush="LightGray" BorderThickness="1" Margin="0,0,0,10">
                 <Grid Background="Transparent">
-                    <Image x:Name="PrintPreview"/>
+                    <Image x:Name="PrintPreview" Stretch="None"/>
                 </Grid>
-            </Border>
+            </Border>-->
         </Grid>
     </Grid>
 </UserControl>
