--- a/src/BsLabPrint/Views/PrinterSettings.xaml
+++ b/src/BsLabPrint/Views/PrinterSettings.xaml
@@ -4,23 +4,57 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BsLabPrint.Views"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Background="White"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="150"/>
             <RowDefinition/>
-            <RowDefinition Height="300"/>
-            <RowDefinition/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="300"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
 
-        <Border BorderThickness="1" BorderBrush="Black" Grid.Row="1" Grid.Column="1">
-            <Image x:Name="PrinterView" />
-        </Border>
+
+        <GroupBox Header="Printer View" Margin="10">
+            <Border BorderThickness="1" BorderBrush="Black" Margin="10">
+                <Image x:Name="PrinterView"/>
+            </Border>
+        </GroupBox>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="300"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <GroupBox Header="Printer Settings" Margin="5">
+                <Grid Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <TextBlock Text="Printer Name: " Margin="0,3,0,0"/>
+                        <TextBlock Text="Printer Dpi: " Margin="0,3,0,0"/>
+                        <TextBlock Text="Label Width: " Margin="0,3,0,0"/>
+                        <TextBlock Text="Label Height: " Margin="0,3,0,0"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <ComboBox x:Name="PrinterListCmb"/>
+                        <TextBox x:Name="PrinterDpiBox"/>
+                        <TextBox x:Name="LabelWidthBox"/>
+                        <TextBox x:Name="LabelHeighBox"/>
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
+            
+            <GroupBox Header="Label Settings" Grid.Column="1" Margin="5">
+                
+            </GroupBox>
+            
+        </Grid>
+        
+        
+          
+
         
     </Grid>
 </UserControl>
