--- a/src/BsLabPrint/Views/PrinterSettings.xaml
+++ b/src/BsLabPrint/Views/PrinterSettings.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BsLabPrint.Views"
-             mc:Ignorable="d" Background="White"
+             mc:Ignorable="d" Background="White" Loaded="UserControl_Loaded"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -16,7 +16,7 @@
 
         <GroupBox Header="Printer View" Margin="10">
             <Border BorderThickness="1" BorderBrush="Black" Margin="10">
-                <Image x:Name="PrinterView"/>
+                <Image x:Name="PrinterView" Source="{Binding BarcodeSource, UpdateSourceTrigger=PropertyChanged, Mode=OneWay, NotifyOnSourceUpdated=True}"/>
             </Border>
         </GroupBox>
 
@@ -34,24 +34,54 @@
                     <StackPanel>
                         <TextBlock Text="Printer Name: " Margin="0,3,0,0"/>
                         <TextBlock Text="Printer Dpi: " Margin="0,3,0,0"/>
-                        <TextBlock Text="Label Width: " Margin="0,3,0,0"/>
-                        <TextBlock Text="Label Height: " Margin="0,3,0,0"/>
+                        <TextBlock Text="Label Width (mm): " Margin="0,3,0,0"/>
+                        <TextBlock Text="Label Height (mm): " Margin="0,3,0,0"/>
+                        <TextBlock Text="Landscape: " Margin="0,3,0,0"/>
                     </StackPanel>
                     <StackPanel Grid.Column="1">
                         <ComboBox x:Name="PrinterListCmb"/>
                         <TextBox x:Name="PrinterDpiBox"/>
                         <TextBox x:Name="LabelWidthBox"/>
                         <TextBox x:Name="LabelHeighBox"/>
+                        <ComboBox x:Name="LandscapeCmb"/>
                     </StackPanel>
                 </Grid>
             </GroupBox>
-            
+
             <GroupBox Header="Label Settings" Grid.Column="1" Margin="5">
-                
+                <Grid Margin="5" Width="300" HorizontalAlignment="Left">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <TextBlock Text="Start Position Y: " Margin="0,3,0,0"/>
+                        <TextBlock Text="Start Position X: " Margin="0,3,0,0"/>
+                        <Rectangle Height="10"/>
+                        <TextBlock Text="Barcode Width: " Margin="0,3,0,0"/>
+                        <TextBlock Text="Barcode Height: " Margin="0,3,0,0"/>
+
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <TextBox x:Name="StartYlbl"/>
+                        <TextBox x:Name="StartXlbl"/>
+                        <Rectangle Height="10"/>
+                        <TextBox x:Name="BarcodeWidthBox"/>
+                        <TextBox x:Name="BarcodeHeightBox"/>
+                    </StackPanel>
+                </Grid>
             </GroupBox>
-            
         </Grid>
-        
+        <Grid Grid.Row="3" Grid.Column="0" Margin="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Button x:Name="SaveChangesBtn" Content="Save Config" Grid.Column="2" Margin="5" Click="SaveChangesBtn_Click"/>
+            <Button x:Name="PrintPreviewBtn" Content="Print Preview" Grid.Column="1" Margin="5" Click="PrintPreviewBtn_Click"/>
+        </Grid>
         
           
 
