--- a/src/BsLabPrint/Views/BarcodeControlView.xaml
+++ b/src/BsLabPrint/Views/BarcodeControlView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BsLabPrint.Views"
              mc:Ignorable="d" 
-             Height="250" Width="800" Background="White">
+             d:Height="250" d:Width="800" Background="White">
     <Grid Background="White" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="230"/>
@@ -13,7 +13,7 @@
         </Grid.ColumnDefinitions>
         <Image x:Name="BarcodeInsert" HorizontalAlignment="Right" Margin="8"/>
         <TextBlock x:Name="TextInput" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="40,0,0,0" FontSize="70" 
-               Foreground="Red"/>
+               Foreground="Red" Text="Hehe"/>
 
     </Grid>
 </UserControl>
